// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Banners|AlertBanner default 1`] = `
<section
  className="sc-bxivhb eMtVEh"
>
  <div
    className="sc-EHOje jtyqUw"
  >
    <p>
      alert text
      <button
        className="MuiButtonBase-root-27 MuiButton-root-1 MuiButton-contained-12 MuiButton-raised-15 sc-ifAKCX bqdATS sc-bdVaJa eKQRDg"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-2 label"
        >
          button text
        </span>
      </button>
    </p>
  </div>
</section>
`;

exports[`Storyshots Banners|ErrorSuccessBanner error 1`] = `
<div
  className="sc-gzVnrw avLPF"
  color="#C1363F"
>
  <div
    className="sc-htoDjs kYYNpa"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-30 root styled-icon sc-VigVT bkqdLp"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
      />
    </svg>
  </div>
  <div
    className="sc-iwsKbI dwDcyq"
  >
    error
  </div>
  <button
    className="MuiButtonBase-root-65 MuiButton-root-39 MuiButton-contained-50 MuiButton-raised-53 sc-dnqmqq ibEVtO sc-bdVaJa eKQRDg"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="0"
    type="button"
  >
    <span
      className="MuiButton-label-40 label"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-30 root styled-icon sc-gZMcBi fwoZLL"
        focusable="false"
        role="presentation"
        viewBox="0 0 500 500"
      >
        <path
          clipRule="evenodd"
          d="M483 456.3L275.7 249 483 41.7 456.3 15 249 222.3 41.7 15 15 41.7 222.3 249 15 456.3 41.7 483 249 275.7 456.3 483z"
          fillRule="evenodd"
        />
      </svg>
      
    </span>
  </button>
</div>
`;

exports[`Storyshots Banners|ErrorSuccessBanner success 1`] = `
<div
  className="sc-gzVnrw dHKoqK"
  color="#5DBA9C"
>
  <div
    className="sc-htoDjs kYYNpa"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-68 root styled-icon sc-gqjmRU kVDmhf"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M0 0h24v24H0V0zm0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M16.59 7.58L10 14.17l-3.59-3.58L5 12l5 5 8-8zM12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
      />
    </svg>
  </div>
  <div
    className="sc-iwsKbI dwDcyq"
  >
    success
  </div>
  <button
    className="MuiButtonBase-root-103 MuiButton-root-77 MuiButton-contained-88 MuiButton-raised-91 sc-dnqmqq ibEVtO sc-bdVaJa eKQRDg"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="0"
    type="button"
  >
    <span
      className="MuiButton-label-78 label"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-68 root styled-icon sc-gZMcBi fwoZLL"
        focusable="false"
        role="presentation"
        viewBox="0 0 500 500"
      >
        <path
          clipRule="evenodd"
          d="M483 456.3L275.7 249 483 41.7 456.3 15 249 222.3 41.7 15 15 41.7 222.3 249 15 456.3 41.7 483 249 275.7 456.3 483z"
          fillRule="evenodd"
        />
      </svg>
      
    </span>
  </button>
</div>
`;

exports[`Storyshots Buttons|BaseButton default 1`] = `
<button
  className="MuiButtonBase-root-132 MuiButton-root-106 MuiButton-contained-117 MuiButton-raised-120 sc-bdVaJa eKQRDg"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  type="button"
>
  <span
    className="MuiButton-label-107 label"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-135 root styled-icon sc-gPEVay gSxctk"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 3H4.99c-1.11 0-1.98.89-1.98 2L3 19c0 1.1.88 2 1.99 2H19c1.1 0 2-.9 2-2V5c0-1.11-.9-2-2-2zm0 12h-4c0 1.66-1.35 3-3 3s-3-1.34-3-3H4.99V5H19v10z"
      />
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
    </svg>
    LABEL TEXT
  </span>
</button>
`;

exports[`Storyshots Buttons|FlatIconButton default 1`] = `
<button
  aria-describedby={null}
  className="MuiButtonBase-root-178 MuiButton-root-152 MuiButton-contained-163 MuiButton-raised-166 sc-bZQynM jlZJzO sc-bdVaJa eKQRDg"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  title="tooltip text"
  type="button"
>
  <span
    className="MuiButton-label-153 label"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-181 root styled-icon sc-iRbamj jYQInW"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 3H4.99c-1.11 0-1.98.89-1.98 2L3 19c0 1.1.88 2 1.99 2H19c1.1 0 2-.9 2-2V5c0-1.11-.9-2-2-2zm0 12h-4c0 1.66-1.35 3-3 3s-3-1.34-3-3H4.99V5H19v10z"
      />
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
    </svg>
    LABEL TEXT
  </span>
</button>
`;

exports[`Storyshots Buttons|GhostButton default 1`] = `
<button
  className="MuiButtonBase-root-216 MuiButton-root-190 MuiButton-contained-201 MuiButton-raised-204 sc-jzJRlG hTvvkz sc-bdVaJa eKQRDg"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  type="button"
>
  <span
    className="MuiButton-label-191 label"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-219 root styled-icon sc-jlyJG kXwwmw"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 3H4.99c-1.11 0-1.98.89-1.98 2L3 19c0 1.1.88 2 1.99 2H19c1.1 0 2-.9 2-2V5c0-1.11-.9-2-2-2zm0 12h-4c0 1.66-1.35 3-3 3s-3-1.34-3-3H4.99V5H19v10z"
      />
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
    </svg>
    LABEL TEXT
  </span>
</button>
`;

exports[`Storyshots Buttons|IconButton default 1`] = `
<button
  className="MuiButtonBase-root-234 MuiIconButton-root-228"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  type="button"
>
  <span
    className="MuiIconButton-label-233"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-237 root styled-icon sc-gipzik fikXjC"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 3H4.99c-1.11 0-1.98.89-1.98 2L3 19c0 1.1.88 2 1.99 2H19c1.1 0 2-.9 2-2V5c0-1.11-.9-2-2-2zm0 12h-4c0 1.66-1.35 3-3 3s-3-1.34-3-3H4.99V5H19v10z"
      />
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
    </svg>
  </span>
  <span
    className="MuiTouchRipple-root-246"
  />
</button>
`;

exports[`Storyshots Buttons|IconButton disabled 1`] = `
<button
  className="MuiButtonBase-root-259 MuiButtonBase-disabled-260 MuiIconButton-root-253 MuiIconButton-disabled-257"
  disabled={true}
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="-1"
  type="button"
>
  <span
    className="MuiIconButton-label-258"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-262 root styled-icon sc-csuQGl dTkLFy"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 3H4.99c-1.11 0-1.98.89-1.98 2L3 19c0 1.1.88 2 1.99 2H19c1.1 0 2-.9 2-2V5c0-1.11-.9-2-2-2zm0 12h-4c0 1.66-1.35 3-3 3s-3-1.34-3-3H4.99V5H19v10z"
      />
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
    </svg>
  </span>
</button>
`;

exports[`Storyshots Buttons|PrimaryButton default 1`] = `
<button
  className="MuiButtonBase-root-297 MuiButton-root-271 MuiButton-contained-282 MuiButton-raised-285 sc-jTzLTM lcwPIJ sc-bdVaJa eKQRDg"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  type="button"
>
  <span
    className="MuiButton-label-272 label"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-300 root styled-icon sc-Rmtcm ffCwtX"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 3H4.99c-1.11 0-1.98.89-1.98 2L3 19c0 1.1.88 2 1.99 2H19c1.1 0 2-.9 2-2V5c0-1.11-.9-2-2-2zm0 12h-4c0 1.66-1.35 3-3 3s-3-1.34-3-3H4.99V5H19v10z"
      />
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
    </svg>
    LABEL TEXT
  </span>
</button>
`;

exports[`Storyshots Buttons|SecondaryButton default 1`] = `
<button
  className="MuiButtonBase-root-335 MuiButton-root-309 MuiButton-contained-320 MuiButton-raised-323 sc-fjdhpX dQkZpA sc-bdVaJa eKQRDg"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  type="button"
>
  <span
    className="MuiButton-label-310 label"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-338 root styled-icon sc-bRBYWo hDCvzT"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 3H4.99c-1.11 0-1.98.89-1.98 2L3 19c0 1.1.88 2 1.99 2H19c1.1 0 2-.9 2-2V5c0-1.11-.9-2-2-2zm0 12h-4c0 1.66-1.35 3-3 3s-3-1.34-3-3H4.99V5H19v10z"
      />
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
    </svg>
    LABEL TEXT
  </span>
</button>
`;

exports[`Storyshots Buttons|TextButton default 1`] = `
<button
  className="MuiButtonBase-root-373 MuiButton-root-347 MuiButton-contained-358 MuiButton-raised-361 sc-htpNat fzSZoe sc-bdVaJa eKQRDg"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  type="button"
>
  <span
    className="MuiButton-label-348 label"
  >
    LABEL TEXT
  </span>
</button>
`;

exports[`Storyshots Buttons|TooltipButton default 1`] = `
<button
  aria-describedby={null}
  className="MuiButtonBase-root-410 MuiButton-root-384 MuiButton-contained-395 MuiButton-raised-398 sc-bdVaJa eKQRDg"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  title="tooltip text"
  type="button"
>
  <span
    className="MuiButton-label-385 label"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-413 root styled-icon sc-hzDkRC iPnNXs"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 3H4.99c-1.11 0-1.98.89-1.98 2L3 19c0 1.1.88 2 1.99 2H19c1.1 0 2-.9 2-2V5c0-1.11-.9-2-2-2zm0 12h-4c0 1.66-1.35 3-3 3s-3-1.34-3-3H4.99V5H19v10z"
      />
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
    </svg>
    LABEL TEXT
  </span>
</button>
`;

exports[`Storyshots Cards|BaseCard default 1`] = `
<div
  className="MuiPaper-root-423 MuiPaper-elevation1-426 MuiPaper-rounded-424 MuiCard-root-422 card sc-cSHVUG dvYpwr"
  color="#310078"
>
  <div
    style={
      Object {
        "padding": "1rem",
      }
    }
  >
    card text
  </div>
</div>
`;

exports[`Storyshots Cards|BaseCard image 1`] = `
<div
  className="MuiPaper-root-479 MuiPaper-elevation1-482 MuiPaper-rounded-480 MuiCard-root-478 card sc-cSHVUG dvYpwr"
  color="#310078"
>
  <div
    style={
      Object {
        "padding": "1rem",
      }
    }
  >
    <img
      alt="placeholder"
      src="imagePlaceholder.svg"
      style={
        Object {
          "width": "10rem",
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots Cards|BaseCard title 1`] = `
<div
  className="MuiPaper-root-451 MuiPaper-elevation1-454 MuiPaper-rounded-452 MuiCard-root-450 card sc-cSHVUG dvYpwr"
  color="#310078"
>
  <div
    style={
      Object {
        "padding": "1rem",
      }
    }
  >
    <h1
      className="sc-kAzzGY dFlnQs"
    >
      card text
    </h1>
  </div>
</div>
`;

exports[`Storyshots Checkbox|Checkbox default 1`] = `
<span
  className="MuiButtonBase-root-522 MuiIconButton-root-516 MuiPrivateSwitchBase-root-512 MuiCheckbox-root-506 MuiPrivateSwitchBase-checked-513 MuiCheckbox-checked-507"
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={null}
>
  <span
    className="MuiIconButton-label-521"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-525"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
      />
    </svg>
    <input
      checked={true}
      className="MuiPrivateSwitchBase-input-515"
      data-indeterminate={false}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
      value="value"
    />
  </span>
  <span
    className="MuiTouchRipple-root-534"
  />
</span>
`;

exports[`Storyshots Checkbox|Checkbox disabled 1`] = `
<span
  className="MuiButtonBase-root-592 MuiButtonBase-disabled-593 MuiIconButton-root-586 MuiIconButton-disabled-590 MuiPrivateSwitchBase-root-582 MuiCheckbox-root-576 MuiCheckbox-colorSecondary-581 MuiPrivateSwitchBase-disabled-584 MuiCheckbox-disabled-578"
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="-1"
>
  <span
    className="MuiIconButton-label-591"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-595"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
      />
    </svg>
    <input
      checked={false}
      className="MuiPrivateSwitchBase-input-585"
      data-indeterminate={false}
      disabled={true}
      onChange={[Function]}
      type="checkbox"
      value="value"
    />
  </span>
</span>
`;

exports[`Storyshots Checkbox|Checkbox unchecked 1`] = `
<span
  className="MuiButtonBase-root-557 MuiIconButton-root-551 MuiPrivateSwitchBase-root-547 MuiCheckbox-root-541 MuiCheckbox-colorSecondary-546"
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={null}
>
  <span
    className="MuiIconButton-label-556"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-560"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
      />
    </svg>
    <input
      checked={false}
      className="MuiPrivateSwitchBase-input-550"
      data-indeterminate={false}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
      value="value"
    />
  </span>
  <span
    className="MuiTouchRipple-root-569"
  />
</span>
`;

exports[`Storyshots Headings|H1 default 1`] = `
<h1
  className="sc-chPdSV iujesU"
  style={
    Object {
      "color": "#464A53",
    }
  }
>
  H1 HEADER TEXT
</h1>
`;

exports[`Storyshots Headings|H2 default 1`] = `
<h2
  className="sc-kgoBCf kFsPKU"
  style={
    Object {
      "color": "#464A53",
    }
  }
>
  H2 HEADER TEXT
</h2>
`;

exports[`Storyshots Headings|H3 default 1`] = `
<h3
  className="sc-kGXeez dyhKDK"
  style={
    Object {
      "color": "#464A53",
    }
  }
>
  H3 HEADER TEXT
</h3>
`;

exports[`Storyshots Icons|TooltipIcon content 1`] = `
<svg
  aria-describedby={null}
  aria-hidden="true"
  className="MuiSvgIcon-root-629 root sc-kpOJdX iWsRMN styled-icon sc-dxgOiQ fcfTMG"
  focusable="false"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  role="presentation"
  title={null}
  viewBox="0 0 24 24"
>
  <path
    d="M0 0h24v24H0z"
    fill="none"
  />
  <path
    d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
  />
  <path
    d="M0 0h24v24H0z"
    fill="none"
  />
</svg>
`;

exports[`Storyshots Icons|TooltipIcon default 1`] = `
<svg
  aria-describedby={null}
  aria-hidden="true"
  className="MuiSvgIcon-root-612 root sc-kpOJdX iWsRMN styled-icon sc-dxgOiQ fcfTMG"
  focusable="false"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  role="presentation"
  title={null}
  viewBox="0 0 24 24"
>
  <path
    d="M0 0h24v24H0z"
    fill="none"
  />
  <path
    d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
  />
  <path
    d="M0 0h24v24H0z"
    fill="none"
  />
</svg>
`;

exports[`Storyshots Links|BaseLink default 1`] = `
<a
  className="sc-ckVGcZ htUXAq"
  classes={
    Object {
      "root": "link",
    }
  }
  href="/path"
  onClick={[Function]}
>
  LABEL TEXT
</a>
`;

exports[`Storyshots Links|BaseLink icon 1`] = `
<a
  className="sc-ckVGcZ htUXAq"
  classes={
    Object {
      "root": "link",
    }
  }
  href="/path"
  onClick={[Function]}
>
  <svg
    aria-hidden="true"
    className="MuiSvgIcon-root-638 root styled-icon sc-jhAzac kuumnq"
    focusable="false"
    role="presentation"
    viewBox="0 0 24 24"
  >
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
    <path
      d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
    />
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
  </svg>
  LABEL TEXT
</a>
`;

exports[`Storyshots Links|GhostButtonLink default 1`] = `
<a
  className="sc-jKJlTe eAkIyo sc-ckVGcZ htUXAq"
  classes={
    Object {
      "root": "link",
    }
  }
  href="/path"
  onClick={[Function]}
>
  LABEL TEXT
</a>
`;

exports[`Storyshots Links|GhostButtonLink icon 1`] = `
<a
  className="sc-jKJlTe eAkIyo sc-ckVGcZ htUXAq"
  classes={
    Object {
      "root": "link",
    }
  }
  href="/path"
  onClick={[Function]}
>
  <svg
    aria-hidden="true"
    className="MuiSvgIcon-root-647 root styled-icon sc-fBuWsC ZRRAF"
    focusable="false"
    role="presentation"
    viewBox="0 0 24 24"
  >
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
    <path
      d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
    />
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
  </svg>
  LABEL TEXT
</a>
`;

exports[`Storyshots List Items|ListItem button 1`] = `
<div
  className="MuiButtonBase-root-722 MuiListItem-root-710 MuiListItem-default-713 MuiListItem-gutters-718 MuiListItem-button-719"
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="button"
  tabIndex="0"
>
  <div
    className="MuiListItemText-root-725 item-text"
  >
    <span
      className="MuiTypography-root-731 MuiTypography-body1-740 MuiListItemText-primary-728"
    >
      List Item Text
    </span>
  </div>
  <span
    className="MuiTouchRipple-root-767"
  />
</div>
`;

exports[`Storyshots List Items|ListItem default 1`] = `
<li
  className="MuiListItem-root-656 MuiListItem-default-659 MuiListItem-gutters-664"
  disabled={false}
>
  <div
    className="MuiListItemText-root-668 item-text"
  >
    <span
      className="MuiTypography-root-674 MuiTypography-body1-683 MuiListItemText-primary-671"
    >
      List Item Text
    </span>
  </div>
</li>
`;

exports[`Storyshots List Items|ListItem disabled 1`] = `
<li
  className="MuiListItem-root-774 MuiListItem-default-777 MuiListItem-gutters-782 MuiListItem-disabled-780"
  disabled={true}
>
  <div
    className="MuiListItemText-root-786 item-text"
  >
    <span
      className="MuiTypography-root-792 MuiTypography-body1-801 MuiListItemText-primary-789"
    >
      List Item Text
    </span>
  </div>
</li>
`;

exports[`Storyshots List Items|ListItem icon 1`] = `
<li
  className="MuiListItem-root-828 MuiListItem-default-831 MuiListItem-gutters-836"
  disabled={false}
  onClick={[Function]}
>
  <div
    className="MuiListItemText-root-840 item-text"
  >
    <span
      className="MuiTypography-root-846 MuiTypography-body1-855 MuiListItemText-primary-843"
    >
      List Item Text
    </span>
  </div>
  <div
    className="MuiListItemIcon-root-882"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-883 root styled-icon sc-fMiknA iceazc"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
      />
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
    </svg>
  </div>
</li>
`;

exports[`Storyshots List Items|ListItem selected 1`] = `
<li
  className="MuiListItem-root-892 MuiListItem-default-895 MuiListItem-gutters-900 MuiListItem-selected-903"
  disabled={false}
>
  <div
    className="MuiListItemText-root-904 item-text"
  >
    <span
      className="MuiTypography-root-910 MuiTypography-body1-919 MuiListItemText-primary-907"
    >
      List Item Text
    </span>
  </div>
</li>
`;

exports[`Storyshots Loading Indicators|LoadingIndicator default 1`] = `
<div
  className="sc-eNQAEJ jwoDya"
>
  <section
    className="sc-kkGfuU ePcewA"
  >
    <div
      className="sc-dVhcbM bQHCVd"
    />
    <div
      className="sc-eqIVtm ksEOCk"
    />
    <div
      className="sc-fAjcbJ fwMlPm"
    />
    <div
      className="sc-caSCKo beRQGi"
    />
    <div
      className="sc-gisBJw fCjjzw"
    />
    <div
      className="sc-kjoXOD ipbvxX"
    />
    <div
      className="sc-cHGsZl hDNDQB"
    />
    <div
      className="sc-TOsTZ eZDcKC"
    />
    <div
      className="sc-kgAjT grTTDv"
    />
    <div
      className="sc-cJSrbW lmWAZI"
    />
    <div
      className="sc-ksYbfQ hJqnHQ"
    />
    <div
      className="sc-hmzhuo cRSwUR"
    />
  </section>
</div>
`;

exports[`Storyshots Loading Indicators|SmallLoadingIndicator default 1`] = `
<span
  className="sc-hMqMXs ccGCnh"
>
  <span
    className="sc-kEYyzF kyapkX"
  >
    <div
      className="sc-frDJqD ibBIUi"
    />
    <div
      className="sc-kvZOFW jBSTYF"
    />
    <div
      className="sc-hqyNC uwTDx"
    />
    <div
      className="sc-jbKcbu kvpfxO"
    />
    <div
      className="sc-dNLxif bKBQKX"
    />
    <div
      className="sc-jqCOkK jvrKWd"
    />
    <div
      className="sc-uJMKN ldercA"
    />
    <div
      className="sc-bbmXgH fkuMhn"
    />
    <div
      className="sc-gGBfsJ kHNqMK"
    />
    <div
      className="sc-jnlKLf sJYuk"
    />
    <div
      className="sc-fYxtnH vUnDA"
    />
    <div
      className="sc-tilXH Uqjco"
    />
  </span>
</span>
`;

exports[`Storyshots Paper|BasePaper default 1`] = `
<div
  className="MuiPaper-root-946 MuiPaper-elevation2-950 MuiPaper-rounded-947 sc-iAyFgw fmaDgc"
>
  <div
    style={
      Object {
        "padding": "2rem",
      }
    }
  >
    paper text
  </div>
</div>
`;

exports[`Storyshots Paper|BasePaper image 1`] = `
<div
  className="MuiPaper-root-973 MuiPaper-elevation2-977 MuiPaper-rounded-974 sc-iAyFgw fmaDgc"
>
  <div
    style={
      Object {
        "padding": "2rem",
      }
    }
  >
    <img
      alt="placeholder"
      src="imagePlaceholder.svg"
      style={
        Object {
          "width": "10rem",
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots Paper|InsetPaper default 1`] = `
<div
  className="MuiPaper-root-1000 MuiPaper-elevation2-1004 MuiPaper-rounded-1001 sc-hSdWYo fXbWxY sc-iAyFgw fmaDgc"
>
  <div
    style={
      Object {
        "padding": "2rem",
      }
    }
  >
    paper text
  </div>
</div>
`;

exports[`Storyshots Paper|InsetPaper image 1`] = `
<div
  className="MuiPaper-root-1027 MuiPaper-elevation2-1031 MuiPaper-rounded-1028 sc-hSdWYo fXbWxY sc-iAyFgw fmaDgc"
>
  <div
    style={
      Object {
        "padding": "2rem",
      }
    }
  >
    <img
      alt="placeholder"
      src="imagePlaceholder.svg"
      style={
        Object {
          "width": "10rem",
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots Radio|RadioButtonGroup default 1`] = `
<div
  className="MuiFormControl-root-1054 form"
  disableRipple={false}
  labelPlacement="end"
>
  <div
    className="MuiFormGroup-root-1058 group"
    disableRipple={false}
    labelPlacement="end"
    role="radiogroup"
  >
    <label
      className="MuiFormControlLabel-root-1060 sc-eHgmQL blxTht"
      disableRipple={false}
    >
      <span
        className="MuiButtonBase-root-1081 MuiIconButton-root-1075 MuiPrivateSwitchBase-root-1071 MuiRadio-root-1066 radio MuiRadio-colorSecondary-1070 sc-cvbbAY cvGIOr"
        labelPlacement="end"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={null}
      >
        <span
          className="MuiIconButton-label-1080"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-1084"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
            />
          </svg>
          <input
            checked={false}
            className="MuiPrivateSwitchBase-input-1074"
            disabled={false}
            onChange={[Function]}
            type="radio"
            value="label-text-1"
          />
        </span>
        <span
          className="MuiTouchRipple-root-1129"
        />
      </span>
      <span
        className="MuiTypography-root-1093 MuiTypography-body2-1101 MuiFormControlLabel-label-1065 label"
      >
        LABEL TEXT
      </span>
    </label>
    <label
      className="MuiFormControlLabel-root-1060 sc-eHgmQL blxTht"
      disableRipple={false}
    >
      <span
        className="MuiButtonBase-root-1081 MuiIconButton-root-1075 MuiPrivateSwitchBase-root-1071 MuiRadio-root-1066 radio MuiRadio-colorSecondary-1070 sc-cvbbAY cvGIOr"
        labelPlacement="end"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={null}
      >
        <span
          className="MuiIconButton-label-1080"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-1084"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
            />
          </svg>
          <input
            checked={false}
            className="MuiPrivateSwitchBase-input-1074"
            disabled={false}
            onChange={[Function]}
            type="radio"
            value="label-text-2"
          />
        </span>
        <span
          className="MuiTouchRipple-root-1129"
        />
      </span>
      <span
        className="MuiTypography-root-1093 MuiTypography-body2-1101 MuiFormControlLabel-label-1065 label"
      >
        LABEL TEXT
      </span>
    </label>
    <label
      className="MuiFormControlLabel-root-1060 sc-eHgmQL blxTht"
      disableRipple={false}
    >
      <span
        className="MuiButtonBase-root-1081 MuiIconButton-root-1075 MuiPrivateSwitchBase-root-1071 MuiRadio-root-1066 radio MuiRadio-colorSecondary-1070 sc-cvbbAY cvGIOr"
        labelPlacement="end"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={null}
      >
        <span
          className="MuiIconButton-label-1080"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-1084"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
            />
          </svg>
          <input
            checked={false}
            className="MuiPrivateSwitchBase-input-1074"
            disabled={false}
            onChange={[Function]}
            type="radio"
            value="label-text-3"
          />
        </span>
        <span
          className="MuiTouchRipple-root-1129"
        />
      </span>
      <span
        className="MuiTypography-root-1093 MuiTypography-body2-1101 MuiFormControlLabel-label-1065 label"
      >
        LABEL TEXT
      </span>
    </label>
  </div>
</div>
`;

exports[`Storyshots Radio|RadioButtonGroup disabled 1`] = `
<div
  className="MuiFormControl-root-1136 form"
  labelPlacement="end"
>
  <div
    className="MuiFormGroup-root-1140 group"
    disabled={true}
    labelPlacement="end"
    role="radiogroup"
  >
    <label
      className="MuiFormControlLabel-root-1142 MuiFormControlLabel-disabled-1146 sc-eHgmQL blxTht"
    >
      <span
        className="MuiButtonBase-root-1163 MuiButtonBase-disabled-1164 MuiIconButton-root-1157 MuiIconButton-disabled-1161 MuiPrivateSwitchBase-root-1153 MuiRadio-root-1148 radio MuiRadio-colorSecondary-1152 MuiPrivateSwitchBase-disabled-1155 MuiRadio-disabled-1150 sc-cvbbAY cvGIOr"
        labelPlacement="end"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="-1"
      >
        <span
          className="MuiIconButton-label-1162"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-1166"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
            />
          </svg>
          <input
            checked={false}
            className="MuiPrivateSwitchBase-input-1156"
            disabled={true}
            onChange={[Function]}
            type="radio"
            value="label-text-1"
          />
        </span>
      </span>
      <span
        className="MuiTypography-root-1175 MuiTypography-body2-1183 MuiFormControlLabel-label-1147 label MuiFormControlLabel-disabled-1146"
      >
        LABEL TEXT
      </span>
    </label>
    <label
      className="MuiFormControlLabel-root-1142 MuiFormControlLabel-disabled-1146 sc-eHgmQL blxTht"
    >
      <span
        className="MuiButtonBase-root-1163 MuiButtonBase-disabled-1164 MuiIconButton-root-1157 MuiIconButton-disabled-1161 MuiPrivateSwitchBase-root-1153 MuiRadio-root-1148 radio MuiRadio-colorSecondary-1152 MuiPrivateSwitchBase-disabled-1155 MuiRadio-disabled-1150 sc-cvbbAY cvGIOr"
        labelPlacement="end"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="-1"
      >
        <span
          className="MuiIconButton-label-1162"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-1166"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
            />
          </svg>
          <input
            checked={false}
            className="MuiPrivateSwitchBase-input-1156"
            disabled={true}
            onChange={[Function]}
            type="radio"
            value="label-text-2"
          />
        </span>
      </span>
      <span
        className="MuiTypography-root-1175 MuiTypography-body2-1183 MuiFormControlLabel-label-1147 label MuiFormControlLabel-disabled-1146"
      >
        LABEL TEXT
      </span>
    </label>
    <label
      className="MuiFormControlLabel-root-1142 MuiFormControlLabel-disabled-1146 sc-eHgmQL blxTht"
    >
      <span
        className="MuiButtonBase-root-1163 MuiButtonBase-disabled-1164 MuiIconButton-root-1157 MuiIconButton-disabled-1161 MuiPrivateSwitchBase-root-1153 MuiRadio-root-1148 radio MuiRadio-colorSecondary-1152 MuiPrivateSwitchBase-disabled-1155 MuiRadio-disabled-1150 sc-cvbbAY cvGIOr"
        labelPlacement="end"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="-1"
      >
        <span
          className="MuiIconButton-label-1162"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-1166"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
            />
          </svg>
          <input
            checked={false}
            className="MuiPrivateSwitchBase-input-1156"
            disabled={true}
            onChange={[Function]}
            type="radio"
            value="label-text-3"
          />
        </span>
      </span>
      <span
        className="MuiTypography-root-1175 MuiTypography-body2-1183 MuiFormControlLabel-label-1147 label MuiFormControlLabel-disabled-1146"
      >
        LABEL TEXT
      </span>
    </label>
  </div>
</div>
`;

exports[`Storyshots Tables|BaseTable default 1`] = `
<table
  className="MuiTable-root-1211 sc-jWBwVP ksZpXa"
>
  <thead
    className="MuiTableHead-root-1212 sc-cMljjf cgnUiz"
  >
    <tr
      className="MuiTableRow-root-1213 MuiTableRow-head-1216 sc-jDwBTQ gHKCKC"
    >
      <th
        aria-sort={null}
        className="MuiTableCell-root-1218 MuiTableCell-head-1219 sc-jAaTju lltWEt"
        iscentered={0}
        scope="col"
      >
        Dessert
      </th>
      <th
        aria-sort={null}
        className="MuiTableCell-root-1218 MuiTableCell-head-1219 sc-jAaTju dkrgEy"
        iscentered={1}
        scope="col"
      >
        Calories
      </th>
      <th
        aria-sort={null}
        className="MuiTableCell-root-1218 MuiTableCell-head-1219 sc-jAaTju dkrgEy"
        iscentered={1}
        scope="col"
      >
        Fat (g)
      </th>
      <th
        aria-sort={null}
        className="MuiTableCell-root-1218 MuiTableCell-head-1219 sc-jAaTju dkrgEy"
        iscentered={1}
        scope="col"
      >
        Carbs (g)
      </th>
      <th
        aria-sort={null}
        className="MuiTableCell-root-1218 MuiTableCell-head-1219 sc-jAaTju dkrgEy"
        iscentered={1}
        scope="col"
      >
        Protein (g)
      </th>
    </tr>
  </thead>
  <tbody
    className="MuiTableBody-root-1230 sc-brqgnP hzFcas"
    hovercolor="#F8F8F8"
  >
    <tr
      className="MuiTableRow-root-1213 sc-jDwBTQ gHKCKC"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-1218 MuiTableCell-body-1220 sc-jAaTju lltWEt"
        iscentered={0}
      >
        Cupcake
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-1218 MuiTableCell-body-1220 sc-jAaTju dkrgEy"
        iscentered={1}
      >
        305
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-1218 MuiTableCell-body-1220 sc-jAaTju dkrgEy"
        iscentered={1}
      >
        4
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-1218 MuiTableCell-body-1220 sc-jAaTju dkrgEy"
        iscentered={1}
      >
        67
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-1218 MuiTableCell-body-1220 sc-jAaTju dkrgEy"
        iscentered={1}
      >
        4
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-1213 sc-jDwBTQ gHKCKC"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-1218 MuiTableCell-body-1220 sc-jAaTju lltWEt"
        iscentered={0}
      >
        Eclair
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-1218 MuiTableCell-body-1220 sc-jAaTju dkrgEy"
        iscentered={1}
      >
        262
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-1218 MuiTableCell-body-1220 sc-jAaTju dkrgEy"
        iscentered={1}
      >
        16
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-1218 MuiTableCell-body-1220 sc-jAaTju dkrgEy"
        iscentered={1}
      >
        24
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-1218 MuiTableCell-body-1220 sc-jAaTju dkrgEy"
        iscentered={1}
      >
        6
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-1213 sc-jDwBTQ gHKCKC"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-1218 MuiTableCell-body-1220 sc-jAaTju lltWEt"
        iscentered={0}
      >
        Gingerbread
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-1218 MuiTableCell-body-1220 sc-jAaTju dkrgEy"
        iscentered={1}
      >
        356
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-1218 MuiTableCell-body-1220 sc-jAaTju dkrgEy"
        iscentered={1}
      >
        16
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-1218 MuiTableCell-body-1220 sc-jAaTju dkrgEy"
        iscentered={1}
      >
        49
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-1218 MuiTableCell-body-1220 sc-jAaTju dkrgEy"
        iscentered={1}
      >
        4
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-1213 sc-jDwBTQ gHKCKC"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-1218 MuiTableCell-body-1220 sc-jAaTju lltWEt"
        iscentered={0}
      >
        Ice Cream
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-1218 MuiTableCell-body-1220 sc-jAaTju dkrgEy"
        iscentered={1}
      >
        207
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-1218 MuiTableCell-body-1220 sc-jAaTju dkrgEy"
        iscentered={1}
      >
        11
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-1218 MuiTableCell-body-1220 sc-jAaTju dkrgEy"
        iscentered={1}
      >
        24
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-1218 MuiTableCell-body-1220 sc-jAaTju dkrgEy"
        iscentered={1}
      >
        4
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Tables|BaseTable offset 1`] = `
<table
  className="MuiTable-root-1231 sc-jWBwVP ksZpXa"
>
  <thead
    className="MuiTableHead-root-1232 sc-cMljjf cgnUiz"
  >
    <tr
      className="MuiTableRow-root-1233 MuiTableRow-head-1236 sc-jDwBTQ gHKCKC"
    >
      <th
        aria-sort={null}
        className="MuiTableCell-root-1238 MuiTableCell-head-1239 sc-jAaTju lltWEt"
        iscentered={0}
        scope="col"
      >
        
      </th>
      <th
        aria-sort={null}
        className="MuiTableCell-root-1238 MuiTableCell-head-1239 sc-jAaTju dkrgEy"
        iscentered={1}
        scope="col"
      >
        column one
      </th>
      <th
        aria-sort={null}
        className="MuiTableCell-root-1238 MuiTableCell-head-1239 sc-jAaTju dkrgEy"
        iscentered={1}
        scope="col"
      >
        column two
      </th>
      <th
        aria-sort={null}
        className="MuiTableCell-root-1238 MuiTableCell-head-1239 sc-jAaTju dkrgEy"
        iscentered={1}
        scope="col"
      >
        column three
      </th>
    </tr>
  </thead>
  <tbody
    className="MuiTableBody-root-1250 sc-brqgnP hzFcas"
    hovercolor="#F8F8F8"
  >
    <tr
      className="MuiTableRow-root-1233 sc-jDwBTQ gHKCKC"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-1238 MuiTableCell-body-1240 sc-jAaTju lltWEt"
        iscentered={0}
      >
        row one
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-1238 MuiTableCell-body-1240 sc-jAaTju dkrgEy"
        iscentered={1}
      >
        01-01
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-1238 MuiTableCell-body-1240 sc-jAaTju dkrgEy"
        iscentered={1}
      >
        01-02
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-1238 MuiTableCell-body-1240 sc-jAaTju dkrgEy"
        iscentered={1}
      >
        01-03
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-1233 sc-jDwBTQ gHKCKC"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-1238 MuiTableCell-body-1240 sc-jAaTju lltWEt"
        iscentered={0}
      >
        row two
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-1238 MuiTableCell-body-1240 sc-jAaTju dkrgEy"
        iscentered={1}
      >
        02-01
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-1238 MuiTableCell-body-1240 sc-jAaTju dkrgEy"
        iscentered={1}
      >
        02-02
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-1238 MuiTableCell-body-1240 sc-jAaTju dkrgEy"
        iscentered={1}
      >
        02-03
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-1233 sc-jDwBTQ gHKCKC"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-1238 MuiTableCell-body-1240 sc-jAaTju lltWEt"
        iscentered={0}
      >
        row three
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-1238 MuiTableCell-body-1240 sc-jAaTju dkrgEy"
        iscentered={1}
      >
        03-01
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-1238 MuiTableCell-body-1240 sc-jAaTju dkrgEy"
        iscentered={1}
      >
        03-02
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-1238 MuiTableCell-body-1240 sc-jAaTju dkrgEy"
        iscentered={1}
      >
        03-03
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-1233 sc-jDwBTQ gHKCKC"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-1238 MuiTableCell-body-1240 sc-jAaTju lltWEt"
        iscentered={0}
      >
        row four
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-1238 MuiTableCell-body-1240 sc-jAaTju dkrgEy"
        iscentered={1}
      >
        04-01
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-1238 MuiTableCell-body-1240 sc-jAaTju dkrgEy"
        iscentered={1}
      >
        04-02
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-1238 MuiTableCell-body-1240 sc-jAaTju dkrgEy"
        iscentered={1}
      >
        04-03
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-1233 sc-jDwBTQ gHKCKC"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-1238 MuiTableCell-body-1240 sc-jAaTju lltWEt"
        iscentered={0}
      >
        row five
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-1238 MuiTableCell-body-1240 sc-jAaTju dkrgEy"
        iscentered={1}
      >
        05-01
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-1238 MuiTableCell-body-1240 sc-jAaTju dkrgEy"
        iscentered={1}
      >
        05-02
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-1238 MuiTableCell-body-1240 sc-jAaTju dkrgEy"
        iscentered={1}
      >
        05-03
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots TextField|TextField autoFocus 1`] = `
<div
  className="MuiFormControl-root-1303 root sc-ktHwxA bsOfio"
  color="#310078"
>
  <label
    className="MuiFormLabel-root-1318 MuiInputLabel-root-1307 MuiInputLabel-formControl-1312 MuiInputLabel-animated-1315 label"
    data-shrink={false}
  >
    Text Field Label
  </label>
  <div
    className="MuiInputBase-root-1338 MuiInput-root-1325 MuiInput-underline-1329 MuiInputBase-formControl-1339 MuiInput-formControl-1326"
    onClick={[Function]}
  >
    <input
      aria-invalid={false}
      autoFocus={true}
      className="MuiInputBase-input-1348 MuiInput-input-1333"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Placeholder text"
      required={false}
      type="text"
    />
  </div>
</div>
`;

exports[`Storyshots TextField|TextField default 1`] = `
<div
  className="MuiFormControl-root-1251 root sc-hEsumM qhuRe"
  color="#310078"
>
  <label
    className="MuiFormLabel-root-1266 MuiInputLabel-root-1255 MuiInputLabel-formControl-1260 MuiInputLabel-animated-1263 label"
    data-shrink={false}
  >
    Text Field Label
  </label>
  <div
    className="MuiInputBase-root-1286 MuiInput-root-1273 MuiInput-underline-1277 MuiInputBase-formControl-1287 MuiInput-formControl-1274"
    onClick={[Function]}
  >
    <input
      aria-invalid={false}
      className="MuiInputBase-input-1296 MuiInput-input-1281"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={false}
      type="text"
    />
  </div>
</div>
`;

exports[`Storyshots TextField|TextField disabled 1`] = `
<div
  className="MuiFormControl-root-1355 root sc-cIShpX iBcLPr"
>
  <label
    className="MuiFormLabel-root-1370 MuiFormLabel-disabled-1372 MuiInputLabel-disabled-1361 MuiInputLabel-root-1359 MuiInputLabel-formControl-1364 MuiInputLabel-animated-1367 label"
    data-shrink={false}
  >
    Text Field Label
  </label>
  <div
    className="MuiInputBase-root-1390 MuiInput-root-1377 MuiInput-underline-1381 MuiInputBase-disabled-1393 MuiInput-disabled-1380 MuiInputBase-formControl-1391 MuiInput-formControl-1378"
    onClick={[Function]}
  >
    <input
      aria-invalid={false}
      className="MuiInputBase-input-1400 MuiInput-input-1385 MuiInputBase-disabled-1393 MuiInput-disabled-1380"
      disabled={true}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Placeholder text"
      required={false}
      type="text"
    />
  </div>
</div>
`;

exports[`Storyshots TextField|TextField multiline 1`] = `
<div
  className="MuiFormControl-root-1407 root sc-kafWEX hxfjDX"
  color="#310078"
>
  <label
    className="MuiFormLabel-root-1422 MuiInputLabel-root-1411 MuiInputLabel-formControl-1416 MuiInputLabel-animated-1419 label"
    data-shrink={false}
  >
    Text Field Label
  </label>
  <div
    className="MuiInputBase-root-1442 MuiInput-root-1429 MuiInput-underline-1433 MuiInputBase-formControl-1443 MuiInput-formControl-1430 MuiInputBase-multiline-1450 MuiInput-multiline-1435"
    onClick={[Function]}
  >
    <div
      className="MuiPrivateTextarea-root-1459"
    >
      <textarea
        aria-hidden="true"
        className="MuiPrivateTextarea-textarea-1460 MuiPrivateTextarea-shadow-1461"
        readOnly={true}
        rows="1"
        tabIndex={-1}
        value=""
      />
      <textarea
        aria-hidden="true"
        className="MuiPrivateTextarea-textarea-1460 MuiPrivateTextarea-shadow-1461"
        readOnly={true}
        rows={4}
        tabIndex={-1}
      />
      <textarea
        aria-invalid={false}
        className="MuiPrivateTextarea-textarea-1460 MuiInputBase-input-1452 MuiInput-input-1437 MuiInputBase-inputMultiline-1454 MuiInput-inputMultiline-1439"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        required={false}
        rows={4}
        style={
          Object {
            "height": 76,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots TextField|TextField placeholder 1`] = `
<div
  className="MuiFormControl-root-1462 root sc-feJyhm iwwCmw"
  color="#310078"
>
  <div
    className="MuiInputBase-root-1479 MuiInput-root-1466 MuiInput-underline-1470 MuiInputBase-formControl-1480 MuiInput-formControl-1467"
    onClick={[Function]}
  >
    <input
      aria-invalid={false}
      className="MuiInputBase-input-1489 MuiInput-input-1474"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Placeholder text"
      required={false}
      type="text"
    />
  </div>
</div>
`;
